[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "codesigs"
dynamic = ["version"]
description = "Extract function and method signatures from source code across multiple languages."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'ast-grep-py']

[project.urls]
Repository = "https://github.com/AnswerDotAI/codesigs"
Documentation = "https://AnswerDotAI.github.io/codesigs"

[project.entry-points.nbdev]
codesigs = "codesigs._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "codesigs.__version__"}

[tool.setuptools.packages.find]
include = ["codesigs"]

[tool.nbdev]
